--- a/INSIDE/29/present.css
+++ b/INSIDE/29/present.css
@@ -171,7 +171,7 @@ body {
 }
 
 .present-box>.side.top .to:after {
-    content: "HAPPY WOMEN'S DAY";
+    content: "ANH VIÊN PÉO";
     display: inline-block;
     transform: rotateY(180deg);
     color: #990000;
